---
source: crates/squawk_linter/src/rules/adding_not_null_field.rs
expression: errors
---
[
    Violation {
        code: AddingNotNullableField,
        message: "Setting a column NOT NULL blocks reads while the table is scanned.",
        text_range: 46..58,
        messages: [
            "Use a check constraint instead.",
        ],
    },
]
